--- a/css/metallorumstyles.css
+++ b/css/metallorumstyles.css
@@ -98,7 +98,7 @@
     font-size: 2em;
     font-weight: bold;
 }
-.metallorum {
+.metallorum__principal {
     color: #11547b;
 }
 .metallorum__sections {
